# car-fleet

./: .breakpoints  .replit  LICENSE  README.md  User.py  User1.py  app.py  app_admin.py  app_autentication.py  app_autentication_google.py  app_branches.py  app_car.py  app_customer.py  app_dashboard.py  app_employee.py  app_expense.py  app_login_draft.py  app_loging.py  app_maintenance.py  app_pricetable.py  app_profile.py  app_reservation.py  app_team.py  database.py  db_account.py  db_branches.py  db_car.py  db_employee.py  db_loging.py  db_maintenance.py  db_profile.py  db_team.py  dp_reservation.py  pyproject.toml  replit.nix  requirements.txt  reset_password.py
0001_old1/: app_old.py  bootstrap.html  calendar1.html  car_reg_submit.html  car_registration.html  crossbar_test.html  database_old.py  employee_form.html  footer.html  login_registration.py  maintenance_form.html  pop-up.html  schedule.py  schedule_reservation.html  signup.html  style.css
blueprint/: int.py
models/: ModelUser.py
templates/: Autentication.html  Loggedin.html  banner.html  bodytext.html  bootstrap.html  car_information.html  car_reg.html  car_reg_form.html  car_reg_submit.html  crossbar_tabs _news.html  crossbar_tabs.html  customer_form.html  customer_reg.html  dashboard.html  file_upload.html  form_branches.html  form_carreg.html  form_customer.html  form_dashboard.html  form_employee.html  form_expense.html  form_pricetable.html  form_profile.html  form_team rev1.html  form_team.html  form_team_old.html  header.html  header1.html  home.html  home_page1.html  index.html  login.html  (+15 more)
(+18 files in other folders)
